# virtual-event-sphere

./: .gitignore  Dockerfile  README.md  api.json  asyncClient.py  devnotes.md  pyproject.toml  send_requests.py
Writerside/: dn.tree  writerside.cfg
Writerside/topics/: Project-Description.md
src/: db.py  main.py
src/api/v1/: users.py
src/core/config/: __init__.py
src/crud/: __init__.py  crud_user.py
src/models/: model_user.py
src/schemas/: schema_user.py
src/ves/: db.py  main.py
src/ves/api/v1/: users.py
src/ves/crud/: crud_user.py
src/ves/schemas/: __init__.py
ves/: main.py
ves/api/v1/: events.py  users.py
ves/core/config/: settings.py
ves/crud/: __init__.py  crud_event.py
ves/models/: __init__.py  model_event.py
ves/schemas/: __init__.py  schema_event.py  schema_user.py
