[project]
name = "virtual-event-sphere"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com"}]
requires-python = ">= 3.11"
dependencies = [
    "pydantic[email]"
]



[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.12.3,<3.13"
fastapi = ">=0.110.2,<0.111"
uvicorn = ">=0.29.0,<0.30"
motor = ">=3.4.0,<3.5"
email-validator = ">=2.1.1,<2.2"

[tool.pixi.tasks]


[tool.pixi.environments]
default = { features = ["dev", "build"], solve-group = "default" }
prod = { features = ["prod"], solve-group = "default" }

[tool.pixi.feature.dev.pypi-dependencies]
virtual-event-sphere = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
start = { cmd = "uvicorn ves.main:app --reload" }
build = { cmd = "docker build -t virtual-event-sphere:latest ."}
app = { cmd = """\
    docker run \
        -p 8000:8000 \
        -e MONGO_URI=$MONGO_URI \
        -e MONGO_DB=$MONGO_DB \
        virtual-event-sphere:latest
    """, depends_on = ["build"] }

[tool.pixi.feature.prod.host-dependencies]
pip = "*"

[tool.pixi.feature.prod.tasks]
# Install into the production environment
postinstall-production = "pip install --no-deps --disable-pip-version-check dist/virtual_event_sphere-*.whl"

###########################################################
# BUILD RELATED CONFIGURATION

# We use dependencies from conda to use it to build the wheel
[tool.pixi.feature.build.dependencies]
build = "*"
hatchling = "*"

[tool.pixi.feature.build.tasks]
build-wheel = { cmd = "python -m build --no-isolation --wheel ."}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ves",
]
###########################################################
